--- a/front/src/app/components/empty/empty.component.html
+++ b/front/src/app/components/empty/empty.component.html
@@ -1,5 +1,7 @@
-<div class="row">
+<div class="container">
+  <div class="row">
     <div class="col-md-12 text-center mt-5">
-        <img src="../../../assets/images/empty.png">
+      <img src="../../../assets/images/empty.png" />
     </div>
+  </div>
 </div>
