--- a/front/src/app/components/sections/preguntas/preguntas.component.html
+++ b/front/src/app/components/sections/preguntas/preguntas.component.html
@@ -1,23 +1,51 @@
-
-<div *ngFor="let pregunta of preguntaService.preguntas">
-  <div class="card bg-dark text-white mb-2 mt-2">
-    <div class="card-header">
-      {{ pregunta.pregunta }}
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">pregunta</h5>
-      <p class="card-text">
-        Categoría:
-        {{ pregunta.categoria }}
-      </p>
-      <p>
-        {{ pregunta.desarrollo }}
-      </p>
-      <p>
-        {{ pregunta.likes }}
-      </p>
-      <a (click)="verPregunta(pregunta._id)" class="btn btn-info">Responder</a>
-      <button (click)="darLike(pregunta)" class="btn btn-danger">like</button>
-      {{ pregunta.creador }}
+<div class="container col-sm-12 com-md-12 col-lg-12 ">
+  <div class="buscar mt-2 ">
+    <div class="md-lg justify-content-center d-flex">
+      <nav
+        class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2"
+      >
+        <form class="form-inline mt-3 mr-3 mb-3">
+          <input
+            class="form-control mr-sm-2 bg-dark"
+            type="search"
+            placeholder="Que necesitas?"
+            aria-label="Search"
+          />
+          <button class="btn btn-info" type="submit">Buscar</button>
+        </form>
+      </nav>
     </div>
   </div>
+</div>
+
+<div class="body-preguntas mt-2 justify-content-center d-flex">
+  <div class="lista-preguntas col-sm-12 com-md-12 col-lg-6">
+    <div *ngFor="let pregunta of preguntaService.preguntas">
+      <div class="card bg-dark text-white mb-2 mt-2">
+        <div class="card-header">
+          <p class="card-text">
+            {{ pregunta.categoria }}
+          </p>
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">{{ pregunta.pregunta }}</h4>
+
+          <!-- <p>
+            {{ pregunta.desarrollo }}
+          </p> -->
+        </div>
+
+        <div class="card-bottom justify-content-between d-flex mb-3">
+          <a (click)="verPregunta(pregunta._id)" class="btn btn-info ml-3"
+            >Responder</a
+          >
+          <p class="mr-3">{{ pregunta.creador }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="profile col-sm-12 com-md-12 col-lg-3 mt-2">
+    <app-liteprofile></app-liteprofile>
+  </div>
+</div>
