--- a/front/src/app/components/users/profile/profile.component.html
+++ b/front/src/app/components/users/profile/profile.component.html
@@ -1,90 +1,98 @@
-<div class="container">
-  <div class="row mt-4 justify-content-center d-flex">
-    <div
-      class="profile-section profile col-sm-6 col-md-6 col-lg-4 justify-content-center d-flex"
-    >
-      <img
-        src="{{ user.photoUrl }}"
-        width="200px"
-        height="200px"
-        class="rounded-circle img-thumbnail img-profile"
-        alt="profile"
-      />
-    </div>
-
-    <div class="profile-section details col-sm-6 col-md-6 col-lg-4">
-      <b>
-        <h3>{{ user.username }}</h3>
-      </b>
-      <p>{{ user.email }}</p>
-      <p>{{ user.bio }}</p>
-      <div class="git"></div>
-    </div>
-    <div class="profile-section medals col-sm-12 col-md-12 col-lg-4">
-      <a
-        data-target="#medalModal"
-        data-toggle="modal"
-        class="MainNavText"
-        id="MainNavHelp"
-        href="#medalModal"
-      >
-        <b>
-          <h3 *ngIf="!noMedals">Reconocimientos</h3>
-        </b>
-        <div *ngFor="let medalla of medallas" class="justify-content-start">
-          <img
-            src="../../../../assets/images/medals/{{ medalla }}.png"
-            class="medal mr-2"
-          />
-        </div>
-      </a>
+<div *ngIf="cargando" class="loading justify-content-center d-flex">
+  <div class="loading-spinner">
+    <div class="loading-c">
+      <div></div>
     </div>
   </div>
 </div>
 
-<!-- modal  -->
-<div class="container col-md-12">
-  <div class="row mt-4 justify-content-center d-flex">
-    <div
-      class="modal fade"
-      id="medalModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="medalModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="card w-100 medalModal">
-          <div class="card-body">
-            <h5 class="card-title">Medallas</h5>
-            <table class="table table-dark">
-              <thead>
-                <tr>
-                  <th scope="col">Medalla</th>
-                  <th scope="col">Título</th>
-                  <th scope="col">Descripción</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let medal of getMedals()">
-                  <th scope="row">
-                    <img
-                      src="../../../../assets/images/medals/{{
-                        medal.medalid
-                      }}.png"
-                    />
-                  </th>
-                  <td>
-                    <p class="mt-1">{{ medal.medalname }}</p>
-                  </td>
-                  <td>
-                    <p class="mt-1">{{ medal.medaldesc }}</p>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+<div [hidden]="cargando">
+  <div class="container">
+    <div class="row mt-4 justify-content-center d-flex">
+      <div
+        class="profile-section profile col-sm-6 col-md-6 col-lg-4 justify-content-center d-flex"
+      >
+        <img
+          src="{{ user.photoUrl }}"
+          class="rounded-circle img-thumbnail img-profile"
+          alt="profile"
+        />
+      </div>
+
+      <div class="profile-section details col-sm-6 col-md-6 col-lg-4">
+        <b>
+          <h3>{{ user.username }}</h3>
+        </b>
+        <p>{{ user.email }}</p>
+        <p>{{ user.bio }}</p>
+        <div class="git"></div>
+      </div>
+      <div class="profile-section medals col-sm-12 col-md-12 col-lg-4">
+        <a
+          data-target="#medalModal"
+          data-toggle="modal"
+          class="MainNavText"
+          id="MainNavHelp"
+          href="#medalModal"
+        >
+          <b>
+            <h3 *ngIf="!noMedals">Reconocimientos</h3>
+          </b>
+          <div *ngFor="let medalla of medallas" class="justify-content-start">
+            <img
+              src="../../../../assets/images/medals/{{ medalla }}.png"
+              class="medal mr-2"
+            />
           </div>
-          <a href="#" class="btn btn-info">Cerrar</a>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- modal  -->
+  <div class="container col-md-12">
+    <div class="row mt-4 justify-content-center d-flex">
+      <div
+        class="modal fade"
+        id="medalModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="medalModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="card w-100 medalModal">
+            <div class="card-body">
+              <h5 class="card-title">Medallas</h5>
+              <table class="table table-dark">
+                <thead>
+                  <tr>
+                    <th scope="col">Medalla</th>
+                    <th scope="col">Título</th>
+                    <th scope="col">Descripción</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let medal of getMedals()">
+                    <th scope="row">
+                      <img
+                        src="../../../../assets/images/medals/{{
+                          medal.medalid
+                        }}.png"
+                      />
+                    </th>
+                    <td>
+                      <p class="mt-1">{{ medal.medalname }}</p>
+                    </td>
+                    <td>
+                      <p class="mt-1">{{ medal.medaldesc }}</p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <a href="#" class="btn btn-info">Cerrar</a>
+          </div>
         </div>
       </div>
     </div>
@@ -92,9 +100,3 @@
 </div>
 
 <!-- fin modal -->
-
-<!-- <img
-                src="../../../../assets/images/medals/{{ medal.medalname }}.png"
-              />
-              <p>{{ medal.medaldesc }}</p>
-             -->
