--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -2,6 +2,15 @@
 body {
     background-color: #222831;
 }
+
+.loading{
+  width: 100%;
+  min-height: 100% !important;
+  position: static;
+}
+
+/* hourglass loading  */
+
 .lds-hourglass {
   position: absolute;
   left: 50%;
@@ -35,3 +44,39 @@ body {
     transform: rotate(1800deg);
   }
 }
+
+/* Rolling loading */
+
+
+@keyframes loading-c {
+  0% { transform: translate(-50%,-50%) rotate(0deg); }
+  100% { transform: translate(-50%,-50%) rotate(360deg); }
+}
+.loading-c div {
+  position: absolute;
+  width: 38px;
+  height: 38px;
+  border: 12px solid #00adb5;
+  border-top-color: transparent;
+  border-radius: 50%;
+}
+.loading-c div {
+  animation: loading-c 1s linear infinite;
+  top: 50px;
+  left: 50px
+}
+.loading-spinner {
+  width: 88px;
+  height: 88px;
+  display: inline-block;
+  overflow: hidden;
+  background: #222831;
+}
+.loading-c {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  top: 40%;
+}
+.loading-c div { box-sizing: content-box; }
+
