--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
 
-
+body {
+  background-color: #222831;
+}
 
 h1,
 h2,
@@ -49,3 +51,6 @@ button
   display: block;
 }
 
+.card-a {
+  cursor: pointer;
+}
