--- a/front/src/app/components/getOne/pregunta/onepregunta.component.html
+++ b/front/src/app/components/getOne/pregunta/onepregunta.component.html
@@ -1,17 +1,17 @@
-
-  <div class="card bg-dark text-white mb-2 mt-2">
-    <div class="card-header">
-      {{ pregunta.pregunta }}
-      {{ pregunta._id }}
-    </div>
-    <div class="card-body">
-      <p class="card-text">
-        Lenguaje:
-        {{ pregunta.categoria }}
-      </p>
-      <p>
-        {{ pregunta.desarrollo }}
-      </p>
-      <a href="#" class="btn btn-info">Responder</a>
-    </div>
+<div class="card bg-dark text-white mb-2 mt-2">
+  <div class="card-header">
+    {{ pregunta.pregunta }}
+    {{ pregunta._id }}
   </div>
+  <div class="card-body">
+    <p class="card-text">
+      Lenguaje:
+      {{ pregunta.categoria }}
+    </p>
+    <p>
+      {{ pregunta.desarrollo }}
+    </p>
+    {{ likes }}
+    <button (click)="like(pregunta)" class="btn btn-danger">like</button>
+  </div>
+</div>
