--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <div class="md-lg">
   <nav class="navbar-dark bg-dark d-flex justify-content-around">
-    <a class="nav-link navbar-brand ml-4 mt-3 " href="#">code(_c)ave</a>
+    <div (click)="gotoHome()">
+      <a class="nav-link navbar-brand ml-4 mt-3">code(_c)ave</a>
+    </div>
 
     <div class="logged-buttons justify-content-center d-flex">
       <button
@@ -32,35 +34,34 @@
   <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4 ">
-        <form class="form-inline search d-flex justify-content-center">
-          <div>
-            <input
-              class="form-control bg-dark"
-              type="search"
-              placeholder="Que necesitas?"
-              aria-label="Search"
-            />
-            <button class="form-control btn btn-info" type="submit">
-              Buscar
-            </button>
-          </div>
-        </form>
+        <div class="logged-buttons justify-content-center d-flex">
+          <button
+            class="btn btn-info mt-3 mb-3 "
+            *ngIf="!isLogged"
+            (click)="ingresar()"
+          >
+            Ingresar
+          </button>
+          <button
+            class="btn btn-info btn-sm justify-content-between d-flex mt-3 mb-3 mr-3"
+            *ngIf="isLogged"
+            (click)="gotoProfile()"
+          >
+            Mi perfil
+          </button>
+          <button
+            class="btn btn-danger btn-sm justify-content-between d-flex mt-3 mb-3"
+            *ngIf="isLogged"
+            (click)="logout()"
+          >
+            Salir
+          </button>
+        </div>
       </div>
     </div>
     <nav class="navbar navbar-dark bg-dark justify-content-between d-flex">
       <a class="nav-link navbar-brand">code(_c)ave</a>
 
-      <button class="btn btn-info " *ngIf="!isLogged" (click)="loginGoogle()">
-        Ingresar
-      </button>
-      <button
-        type="button"
-        class="btn btn-info "
-        *ngIf="isLogged"
-        (click)="logout()"
-      >
-        Salir
-      </button>
       <button
         class="navbar-toggler"
         type="button"
