--- a/front/src/app/components/sections/snippets/snippets.component.html
+++ b/front/src/app/components/sections/snippets/snippets.component.html
@@ -1,24 +1,47 @@
-
-<div *ngFor="let snippet of snippetService.snippets">
-  <div class="card bg-dark text-white mb-2 mt-2">
-    <div class="card-header">
-      {{ snippet.titulo }}
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Snippet</h5>
-      <p class="card-text">
-        Lenguaje:
-        {{ snippet.lenguaje }}
-      </p>
-      <p>
-        {{ snippet.desarrollo }}
-      </p>
-      <p>
-        {{ snippet.likes }}
-      </p>
-      <a (click)="verSnippet(snippet._id)" class="btn btn-info">Responder</a>
-      <button (click)="darLike(snippet)" class="btn btn-danger">like</button>
-      {{ snippet.creador }}
+<div class="container col-sm-12 com-md-12 col-lg-12 ">
+  <div class="buscar mt-2">
+    <div class="md-lg justify-content-center d-flex">
+      <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2" >
+        <form class="form-inline mt-3 mr-3 mb-3">
+          <input
+            class="form-control mr-sm-2 bg-dark"
+            type="search"
+            placeholder="Que necesitas?"
+            aria-label="Search"
+          />
+          <button class="btn btn-info" type="submit">Buscar</button>
+        </form>
+      </nav>
     </div>
   </div>
 </div>
+
+<div class="snippets col-lg-9">
+  <div class="mt-2 col-sm-12 col-md-12 col-lg-12">
+    <div *ngFor="let snippet of snippetService.snippets">
+      <div class="card bg-dark text-white mb-2 mt-2">
+        <div class="card-header">
+          {{ snippet.titulo }}
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Snippet</h5>
+          <p class="card-text">
+            Lenguaje:
+            {{ snippet.lenguaje }}
+          </p>
+          <p>
+            {{ snippet.desarrollo }}
+          </p>
+          <p>
+            {{ snippet.likes }}
+          </p>
+          <a (click)="verSnippet(snippet._id)" class="btn btn-info">Responder</a>
+          <button (click)="darLike(snippet)" class="ml-2 btn btn-danger">like</button>
+          {{ snippet.creador }}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
