--- a/front/src/app/components/sections/tutoriales/tutoriales.component.html
+++ b/front/src/app/components/sections/tutoriales/tutoriales.component.html
@@ -1,23 +1,45 @@
-<div *ngFor="let tutorial of tutorialService.tutoriales">
-  <div class="card bg-dark text-white mb-2 mt-2">
-    <div class="card-header">
-      {{ tutorial.title }}
+<div class="container col-sm-12 com-md-12 col-lg-12 ">
+  <div class="buscar mt-2">
+    <div class="md-lg justify-content-center d-flex">
+      <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2" >
+        <form class="form-inline mt-3 mr-3 mb-3">
+          <input
+            class="form-control mr-sm-2 bg-dark"
+            type="search"
+            placeholder="Que necesitas?"
+            aria-label="Search"
+          />
+          <button class="btn btn-info" type="submit">Buscar</button>
+        </form>
+      </nav>
     </div>
-    <div class="card-body">
-      <h5 class="card-title">Snippet</h5>
-      <p class="card-text">
-        Categoria:
-        {{ tutorial.categoria }}
-      </p>
-      <p>
-        {{ tutorial.contenido }}
-      </p>
-      <p>
-        {{ tutorial.likes }}
-      </p>
-      <a (click)="verTutorial(tutorial._id)" class="btn btn-info">Responder</a>
-      <button (click)="darLike(tutorial)" class="btn btn-danger">like</button>
-      {{ tutorial.creador }}
+  </div>
+</div>
+
+<div class="tutoriales col-lg-9 " >
+  <div class="mt-2 col-sm-12 col-md-12 col-lg-12">
+    <div *ngFor="let tutorial of tutorialService.tutoriales">
+      <div class="card bg-dark text-white mb-2 mt-2">
+        <div class="card-header">
+          {{ tutorial.title }}
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Tutoriales</h5>
+          <p class="card-text">
+            Categoria:
+            {{ tutorial.categoria }}
+          </p>
+          <p>
+            {{ tutorial.contenido }}
+          </p>
+          <p>
+            {{ tutorial.likes }}
+          </p>
+          <a (click)="verTutorial(tutorial._id)" class="btn btn-info">Responder</a>
+          <button (click)="darLike(tutorial)" class="ml-2 btn btn-danger">like</button>
+          {{ tutorial.creador }}
+        </div>
+      </div>
     </div>
   </div>
 </div>
