--- a/front/src/app/components/getOne/pregunta/onepregunta.component.css
+++ b/front/src/app/components/getOne/pregunta/onepregunta.component.css
@@ -1,3 +1,12 @@
 .nolike {
   color: black;
 }
+
+.pregunta-section {
+  float: left;
+}
+
+.pregunta {
+  margin-left: auto;
+  margin-right: auto;
+}
