--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="md-lg">
   <nav class="navbar-dark bg-dark d-flex justify-content-around">
-    <div (click)="gotoHome()">
+    <div class="cursor-hand" (click)="gotoHome()">
       <a class="nav-link navbar-brand ml-4 mt-3">code(_c)ave</a>
     </div>
 
