--- a/front/src/app/components/sections/preguntas/preguntas.component.html
+++ b/front/src/app/components/sections/preguntas/preguntas.component.html
@@ -20,14 +20,14 @@
 
 <div class="pregunta col-lg-9">
   <div
-    class="pregunta-section body-preguntas mt-2 col-sm-12 com-md-12 col-lg-9"
+    class="pregunta-section body-preguntas mt-2 col-sm-12 com-md-12 col-lg-8"
   >
     <div *ngFor="let pregunta of preguntaService.preguntas">
       <div class="card bg-dark text-white mb-2 mt-2">
         <div class="card-header">
           {{ pregunta.categoria }}
         </div>
-        <div class="card-body card-a" (click)="verPregunta(pregunta._id)">
+        <div class="card-body cursor-hand" (click)="verPregunta(pregunta._id)">
           <h4 class="card-title">{{ pregunta.pregunta }}</h4>
         </div>
 
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div class="pregunta-section profile mt-2 col-sm-12 com-md-12 col-lg-3">
+  <div class="pregunta-section profile mt-4 col-sm-12 com-md-12 col-lg-4">
     <app-liteprofile></app-liteprofile>
   </div>
 </div>
