paginación en preguntas, se cambiaron algunas palabras al ingles

--- a/front/src/app/components/sections/tutoriales/onetutorial/onetutorial.component.html
+++ b/front/src/app/components/sections/tutoriales/onetutorial/onetutorial.component.html
@@ -1,6 +1,6 @@
 <div class="card bg-dark text-white mb-2 mt-2">
   <div class="card-header">
-    {{ tutorial.title }}
+    {{ tutorial.titulo }}
     {{ tutorial._id }}
   </div>
   <div class="card-body">
@@ -9,7 +9,7 @@
       {{ tutorial.category }}
     </p>
     <p>
-      {{ tutorial.contenido }}
+      {{ tutorial.desarrollo }}
     </p>
     <a href="#" class="btn btn-info">Responder</a>
   </div>
