--- a/front/src/app/components/users/profile/profile.component.html
+++ b/front/src/app/components/users/profile/profile.component.html
@@ -38,7 +38,7 @@
           <b>
             <h3 *ngIf="!noMedals">Reconocimientos</h3>
           </b>
-          <div *ngFor="let medalla of medallas" class="justify-content-start">
+          <div *ngFor="let medalla of medals" class="justify-content-start">
             <img
               src="../../../../assets/images/medals/{{ medalla }}.png"
               class="medal mr-2"
