--- a/front/src/app/components/users/profileowner/profileowner.component.html
+++ b/front/src/app/components/users/profileowner/profileowner.component.html
@@ -47,10 +47,7 @@
               <b>
                 <h4 *ngIf="!noMedals">Reconocimientos</h4>
               </b>
-              <div
-                *ngFor="let medalla of medallas"
-                class="justify-content-start"
-              >
+              <div *ngFor="let medalla of medals" class="justify-content-start">
                 <img
                   src="../../../../assets/images/medals/{{ medalla }}.png"
                   class="medal mr-1 mb-1"
