--- a/front/src/app/components/sections/preguntas/preguntas.component.html
+++ b/front/src/app/components/sections/preguntas/preguntas.component.html
@@ -1,16 +1,9 @@
 <div class="container col-sm-12 com-md-12 col-lg-12 ">
   <div class="buscar mt-2 ">
     <div class="md-lg justify-content-center d-flex">
-      <nav
-        class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2"
-      >
+      <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2">
         <form class="form-inline mt-3 mr-3 mb-3">
-          <input
-            class="form-control mr-sm-2 bg-dark"
-            type="search"
-            placeholder="Que necesitas?"
-            aria-label="Search"
-          />
+          <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?" aria-label="Search" />
           <button class="btn btn-info" type="submit">Buscar</button>
         </form>
       </nav>
@@ -19,26 +12,27 @@
 </div>
 
 <div class="pregunta col-lg-9">
-  <div
-    class="pregunta-section body-preguntas mt-2 col-sm-12 com-md-12 col-lg-8"
-  >
-    <div *ngFor="let pregunta of preguntaService.preguntas">
+  <div class="pregunta-section body-preguntas mt-2 col-sm-12 com-md-12 col-lg-8">
+    <div *ngFor="
+        let pregunta of preguntaService.preguntas
+          | slice: (page - 1) * pageSize:(page - 1) * pageSize + pageSize
+      ">
       <div class="card bg-dark text-white mb-2 mt-2">
         <div class="card-header">
-          {{ pregunta.categoria }}
+          {{ pregunta.category }}
         </div>
         <div class="card-body cursor-hand" (click)="verPregunta(pregunta._id)">
           <h4 class="card-title">{{ pregunta.pregunta }}</h4>
         </div>
 
         <div class="card-bottom justify-content-between d-flex mb-3">
-          <a (click)="verPregunta(pregunta._id)" class="btn btn-info ml-3"
-            >Responder</a
-          >
-          <p class="mr-3">{{ pregunta.creador }}</p>
+          <a (click)="verPregunta(pregunta._id)" class="btn btn-info ml-3">Responder</a>
+          <p class="mr-3">{{ pregunta.owner }}</p>
         </div>
       </div>
     </div>
+    <ngb-pagination [collectionSize]="this.collectionSize" [(page)]="page" [maxSize]="5" [rotate]="true"
+      [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
   </div>
 
   <div class="pregunta-section profile mt-4 col-sm-12 com-md-12 col-lg-4">
