--- a/front/src/app/components/sections/snippets/onesnippet/onesnippet.component.html
+++ b/front/src/app/components/sections/snippets/onesnippet/onesnippet.component.html
@@ -1,15 +1,15 @@
 <div class="card bg-dark text-white mb-2 mt-2">
   <div class="card-header">
-    {{ tutorial.title }}
-    {{ tutorial._id }}
+    {{ snippet.titulo }}
+    {{ snippet._id }}
   </div>
   <div class="card-body">
     <p class="card-text">
-      Categoria:
-      {{ tutorial.category }}
+      Lenguaje:
+      {{ snippet.category }}
     </p>
     <p>
-      {{ tutorial.contenido }}
+      {{ snippet.desarrollo }}
     </p>
     <a href="#" class="btn btn-info">Responder</a>
   </div>
