--- a/front/src/app/components/sections/snippets/snippets.component.html
+++ b/front/src/app/components/sections/snippets/snippets.component.html
@@ -1,14 +1,9 @@
 <div class="container col-sm-12 com-md-12 col-lg-12 ">
   <div class="buscar mt-2">
     <div class="md-lg justify-content-center d-flex">
-      <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2" >
+      <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2">
         <form class="form-inline mt-3 mr-3 mb-3">
-          <input
-            class="form-control mr-sm-2 bg-dark"
-            type="search"
-            placeholder="Que necesitas?"
-            aria-label="Search"
-          />
+          <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?" aria-label="Search" />
           <button class="btn btn-info" type="submit">Buscar</button>
         </form>
       </nav>
@@ -37,11 +32,9 @@
           </p>
           <a (click)="verSnippet(snippet._id)" class="btn btn-info">Responder</a>
           <button (click)="darLike(snippet)" class="ml-2 btn btn-danger">like</button>
-          {{ snippet.creador }}
+          {{ snippet.owner }}
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
