--- a/front/src/app/components/sections/preguntas/onepregunta/onepregunta.component.html
+++ b/front/src/app/components/sections/preguntas/onepregunta/onepregunta.component.html
@@ -1,4 +1,4 @@
-<div class="pregunta col-lg-9 ">
+<div class="pregunta col-lg-9 justify-content-between d-flex">
   <div class="pregunta-section profile mt-2 col-lg-3">
     <app-profileowner></app-profileowner>
   </div>
