--- a/front/src/app/components/sections/snippets/snippets.component.html
+++ b/front/src/app/components/sections/snippets/snippets.component.html
@@ -1,5 +1,5 @@
 <div class="container col-sm-12 com-md-12 col-lg-12 ">
-  <div class="buscar mt-2">
+  <div class="buscar mt-2 ">
     <div class="md-lg justify-content-center d-flex">
       <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2">
         <form class="form-inline mt-3 mr-3 mb-3">
@@ -11,30 +11,31 @@
   </div>
 </div>
 
-<div class="snippets col-lg-9">
-  <div class="mt-2 col-sm-12 col-md-12 col-lg-12">
-    <div *ngFor="let snippet of snippetService.snippets">
+<div class="snippet col-lg-9">
+  <div class="snippet-section body-snippets mt-2 col-sm-12 com-md-12 col-lg-8">
+    <div *ngFor="
+        let snippet of snippetService.snippets
+          | slice: (page - 1) * pageSize:(page - 1) * pageSize + pageSize
+      ">
       <div class="card bg-dark text-white mb-2 mt-2">
         <div class="card-header">
-          {{ snippet.titulo }}
+          {{ snippet.category }}
         </div>
-        <div class="card-body">
-          <h5 class="card-title">Snippet</h5>
-          <p class="card-text">
-            Lenguaje:
-            {{ snippet.lenguaje }}
-          </p>
-          <p>
-            {{ snippet.desarrollo }}
-          </p>
-          <p>
-            {{ snippet.likes }}
-          </p>
-          <a (click)="verSnippet(snippet._id)" class="btn btn-info">Responder</a>
-          <button (click)="darLike(snippet)" class="ml-2 btn btn-danger">like</button>
-          {{ snippet.owner }}
+        <div class="card-body cursor-hand" (click)="verSnippet(snippet._id)">
+          <h4 class="card-title">{{ snippet.snippet }}</h4>
+        </div>
+
+        <div class="card-bottom justify-content-between d-flex mb-3">
+          <a (click)="verSnippet(snippet._id)" class="btn btn-info ml-3">Responder</a>
+          <p class="mr-3">{{ snippet.owner }}</p>
         </div>
       </div>
     </div>
+    <ngb-pagination [collectionSize]="this.collectionSize" [(page)]="page" [maxSize]="5" [rotate]="true"
+      [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+  </div>
+
+  <div class="snippet-section profile mt-4 col-sm-12 com-md-12 col-lg-4">
+    <app-liteprofile></app-liteprofile>
   </div>
 </div>
