--- a/front/src/app/components/sections/tutoriales/onetutorial/onetutorial.component.html
+++ b/front/src/app/components/sections/tutoriales/onetutorial/onetutorial.component.html
@@ -1,16 +1,23 @@
-<div class="card bg-dark text-white mb-2 mt-2">
-  <div class="card-header">
-    {{ tutorial.titulo }}
-    {{ tutorial._id }}
+<div class="tutorial col-lg-9 justify-content-between d-flex">
+  <div class="tutorial-section profile mt-2 col-lg-3">
+    <app-profileowner></app-profileowner>
   </div>
-  <div class="card-body">
-    <p class="card-text">
-      Categoria:
-      {{ tutorial.category }}
-    </p>
-    <p>
-      {{ tutorial.desarrollo }}
-    </p>
-    <a href="#" class="btn btn-info">Responder</a>
+  <div class="card bg-dark text-white tutorial-section mt-4 col-lg-8">
+    <div class="card-header justify-content-between d-flex">
+      <p>{{ tutorial.tutorial }}</p>
+      <p>{{ tutorial.category }}</p>
+    </div>
+    <div class="card-body">
+      <p class="card-text"></p>
+      <p>
+        {{ tutorial.tutorial }}
+      </p>
+      <button [hidden]="!liked" (click)="like(tutorial)" class="btn btn-danger">
+        <i class="fa fa-heart"></i> {{ likes }}
+      </button>
+      <button [hidden]="liked" (click)="like(tutorial)" class="btn btn-light nolike">
+        <i class="fa fa-heart"></i> {{ likes }}
+      </button>
+    </div>
   </div>
 </div>
