--- a/front/src/app/components/sections/tutoriales/tutoriales.component.html
+++ b/front/src/app/components/sections/tutoriales/tutoriales.component.html
@@ -1,5 +1,5 @@
 <div class="container col-sm-12 com-md-12 col-lg-12 ">
-  <div class="buscar mt-2">
+  <div class="buscar mt-2 ">
     <div class="md-lg justify-content-center d-flex">
       <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2">
         <form class="form-inline mt-3 mr-3 mb-3">
@@ -11,37 +11,31 @@
   </div>
 </div>
 
-<div class="tutoriales col-lg-9 ">
-  <div class="mt-2 col-sm-12 col-md-12 col-lg-12">
+<div class="tutorial col-lg-9">
+  <div class="tutorial-section body-tutoriales mt-2 col-sm-12 com-md-12 col-lg-8">
     <div *ngFor="
         let tutorial of tutorialService.tutoriales
           | slice: (page - 1) * pageSize:(page - 1) * pageSize + pageSize
       ">
       <div class="card bg-dark text-white mb-2 mt-2">
         <div class="card-header">
-          {{ tutorial.title }}
+          {{ tutorial.category }}
         </div>
-        <div class="card-body">
-          <h5 class="card-title">Tutoriales</h5>
-          <p class="card-text">
-            Categoria:
-            {{ tutorial.category }}
-          </p>
-          <p>
-            {{ tutorial.contenido }}
-          </p>
-          <p>
-            {{ tutorial.likes }}
-          </p>
-          <a (click)="verTutorial(tutorial._id)" class="btn btn-info">Responder</a>
-          <button (click)="darLike(tutorial)" class="ml-2 btn btn-danger">
-            like
-          </button>
-          {{ tutorial.owner }}
+        <div class="card-body cursor-hand" (click)="verTutorial(tutorial._id)">
+          <h4 class="card-title">{{ tutorial.title }}</h4>
+        </div>
+
+        <div class="card-bottom justify-content-between d-flex mb-3">
+          <a (click)="verTutorial(tutorial._id)" class="btn btn-info ml-3">Responder</a>
+          <p class="mr-3">{{ tutorial.owner }}</p>
         </div>
       </div>
     </div>
     <ngb-pagination [collectionSize]="this.collectionSize" [(page)]="page" [maxSize]="5" [rotate]="true"
       [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+  </div>
+
+  <div class="tutorial-section profile mt-4 col-sm-12 com-md-12 col-lg-4">
+    <app-liteprofile></app-liteprofile>
   </div>
 </div>
