--- a/front/src/app/components/users/profileowner/profileowner.component.html
+++ b/front/src/app/components/users/profileowner/profileowner.component.html
@@ -10,19 +10,11 @@
   <div class="perfil">
     <div class="container">
       <div class="row mt-4 justify-content-center d-flex">
-        <div
-          class="profile-section profile col-sm-12 col-md-12 col-lg-12 justify-content-center d-flex"
-        >
-          <img
-            src="{{ user.photoUrl }}"
-            class="rounded-circle img-thumbnail img-profile"
-            alt="profile"
-          />
+        <div class="profile-section profile col-sm-12 col-md-12 col-lg-12 justify-content-center d-flex">
+          <img src="{{ user.photoUrl }}" class="rounded-circle img-thumbnail img-profile" alt="profile" />
         </div>
         <div class="justify-content-center">
-          <div
-            class="profile-section details col-sm-12 col-md-12 col-lg-12 mt-2"
-          >
+          <div class="profile-section details col-sm-12 col-md-12 col-lg-12 mt-2">
             <div class="cursor-hand" (click)="gotoOwnerProfile()">
               <b>
                 <h3>{{ user.username }}</h3>
@@ -34,24 +26,13 @@
           </div>
         </div>
         <div class="justify-content-center">
-          <div
-            class="profile-section medals col-sm-12 col-md-12 col-lg-12 mt-2"
-          >
-            <a
-              data-target="#medalModal"
-              data-toggle="modal"
-              class="MainNavText"
-              id="MainNavHelp"
-              href="#medalModal"
-            >
+          <div class="profile-section medals col-sm-12 col-md-12 col-lg-12 mt-2">
+            <a data-target="#medalModal" data-toggle="modal" class="MainNavText" id="MainNavHelp" href="#medalModal">
               <b>
                 <h4 *ngIf="!noMedals">Reconocimientos</h4>
               </b>
               <div *ngFor="let medalla of medals" class="justify-content-start">
-                <img
-                  src="../../../../assets/images/medals/{{ medalla }}.png"
-                  class="medal mr-1 mb-1"
-                />
+                <img src="../../../../assets/images/medals/{{ medalla }}.png" class="medal mr-1 mb-1" />
               </div>
             </a>
           </div>
@@ -61,14 +42,8 @@
       <!-- modal  -->
       <div class="container col-md-12">
         <div class="row mt-4 justify-content-center d-flex">
-          <div
-            class="modal fade"
-            id="medalModal"
-            tabindex="-1"
-            role="dialog"
-            aria-labelledby="medalModalLabel"
-            aria-hidden="true"
-          >
+          <div class="modal fade" id="medalModal" tabindex="-1" role="dialog" aria-labelledby="medalModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="card w-100 medalModal">
                 <div class="card-body">
@@ -84,11 +59,9 @@
                     <tbody>
                       <tr *ngFor="let medal of getMedals()">
                         <th scope="row">
-                          <img
-                            src="../../../../assets/images/medals/{{
+                          <img src="../../../../assets/images/medals/{{
                               medal.medalid
-                            }}.png"
-                          />
+                            }}.png" />
                         </th>
                         <td>
                           <p class="mt-1">{{ medal.medalname }}</p>
