Optimización de archivos. Fusión de snippets. Hoy empiezo a escribir bien los commits.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -7,5 +7,6 @@
 </div>
 
 <div [hidden]="cargando">
-  <app-navbar></app-navbar> <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
 </div>
