--- a/front/src/app/components/portal/portal.component.html
+++ b/front/src/app/components/portal/portal.component.html
@@ -1,43 +1,26 @@
 <div class="bg-dark">
-  <div class="button-portal col-lg-4 col-md-4 col-sm-12">
-    <button
-      [ngClass]="{ active: oTutoriales == true }"
-      class="btn btn-dark nav-button-4"
-      (click)="mostrarTutoriales()"
-    >
+
+  <div class="button-portal col-lg-6 col-md-6 col-sm-12">
+    <button [ngClass]="{ active: oTutoriales == true }" class="btn btn-dark nav-button-4" (click)="mostrarTutoriales()">
       <a class="nav-link " href="#">Tutoriales</a>
     </button>
   </div>
 
-  <div class="button-portal col-lg-4 col-md-4 col-sm-12">
-    <button
-      [ngClass]="{ active: oPreguntas == true }"
-      class="btn btn-dark nav-button-4 "
-      (click)="mostrarPreguntas()"
-    >
+  <div class="button-portal col-lg-6 col-md-6 col-sm-12">
+    <button [ngClass]="{ active: oPreguntas == true }" class="btn btn-dark nav-button-4 " (click)="mostrarPreguntas()">
       <a class="nav-link" href="#">Preguntas</a>
     </button>
   </div>
-  <div class="button-portal col-lg-4 col-md-4 col-sm-12">
-    <button
-      [ngClass]="{ active: oSnippets == true }"
-      class="btn btn-dark nav-button-4 "
-      (click)="mostrarSnippets()"
-    >
-      <a class=" nav-link" href="#">Snippets</a>
-    </button>
-  </div>
+
 </div>
 
-<div id="tutoriales" *ngIf="oTutoriales == true">
+<div [hidden]="oTutoriales == false">
   <app-tutoriales></app-tutoriales>
 </div>
-<div class="section" *ngIf="oPreguntas == true">
+<div [hidden]="oPreguntas == false">
   <app-preguntas></app-preguntas>
 </div>
-<div class="section" *ngIf="oSnippets == true">
-  <app-snippets></app-snippets>
-</div>
-<div class="empty-img" *ngIf="empty == true">
+
+<div class="empty-img" *ngIf="empty">
   <app-empty></app-empty>
 </div>
