--- a/front/src/app/components/sections/tutoriales/onetutorial/onetutorial.component.html
+++ b/front/src/app/components/sections/tutoriales/onetutorial/onetutorial.component.html
@@ -1,8 +1,10 @@
 <div class="tutorial col-lg-9 justify-content-between d-flex">
-  <div class="tutorial-section profile mt-2 col-lg-3">
+
+  <div class="tutorial-section profile mt-2 col-sm-12 col-md-12 col-lg-3">
     <app-profileowner></app-profileowner>
   </div>
-  <div class="card bg-dark text-white tutorial-section mt-4 col-lg-8">
+
+  <div (dblclick)="like(tutorial)" class="card bg-dark text-white tutorial-section mt-4 col-sm-12 col-md-12 col-lg-8">
     <div class="card-header justify-content-between d-flex">
       <p>{{ tutorial.tutorial }}</p>
       <p>{{ tutorial.category }}</p>
@@ -19,5 +21,7 @@
         <i class="fa fa-heart"></i> {{ likes }}
       </button>
     </div>
+
   </div>
+
 </div>
