--- a/front/src/app/frontComponents/portal/portal.component.html
+++ b/front/src/app/frontComponents/portal/portal.component.html
@@ -1,14 +1,14 @@
 <div class="bg-dark">
 
-  <div class="button-portal col-lg-6 col-md-6 col-sm-12">
+  <div class="button-portal col-lg-6 col-md-6 col-sm-6">
     <button [ngClass]="{ active: oTutoriales == true }" class="btn btn-dark nav-button-4" (click)="mostrarTutoriales()">
-      <a class="nav-link " href="#">Tutoriales</a>
+      <a class="nav-link " href="#">_tutoriales</a>
     </button>
   </div>
 
-  <div class="button-portal col-lg-6 col-md-6 col-sm-12">
+  <div class="button-portal col-lg-6 col-md-6 col-sm-6">
     <button [ngClass]="{ active: oPreguntas == true }" class="btn btn-dark nav-button-4 " (click)="mostrarPreguntas()">
-      <a class="nav-link" href="#">Preguntas</a>
+      <a class="nav-link" href="#">_preguntas</a>
     </button>
   </div>
 
