--- a/front/src/app/frontComponents/sections/preguntas/onepregunta/onepregunta.component.html
+++ b/front/src/app/frontComponents/sections/preguntas/onepregunta/onepregunta.component.html
@@ -1,23 +1,29 @@
-<div class="pregunta col-lg-9 justify-content-between d-flex">
-  <div class="pregunta-section profile mt-2 col-lg-3">
-    <app-profileowner></app-profileowner>
-  </div>
-  <div class="card bg-dark text-white pregunta-section mt-4 col-lg-8">
-    <div class="card-header justify-content-between d-flex">
-      <p>{{ pregunta.pregunta }}</p>
-      <p>{{ pregunta.category }}</p>
+<div class="container justify-content-center d-flex">
+  <div class="row col-lg-12 col-md-12 col-sm-12">
+
+    <div class=" col-sm-12 col-md-12 col-lg-12">
+      <app-profileowner></app-profileowner>
     </div>
-    <div class="card-body">
-      <p class="card-text"></p>
-      <p>
-        {{ pregunta.details }}
-      </p>
-      <button [hidden]="!liked" (click)="like(pregunta)" class="btn btn-danger">
-        <i class="fa fa-heart"></i> {{ likes }}
-      </button>
-      <button [hidden]="liked" (click)="like(pregunta)" class="btn btn-light nolike">
-        <i class="fa fa-heart"></i> {{ likes }}
-      </button>
+    <div class=" col-sm-12 col-md-12 col-lg-12">
+      <div class="card bg-dark text-white pregunta-section mt-3 col-lg-12">
+        <div class="card-header justify-content-between d-flex">
+          <b>
+            <p>{{ pregunta.pregunta }}</p>
+          </b>
+          <p>{{ pregunta.category }}</p>
+        </div>
+        <div class="card-body">
+          <p class="card-text"> {{ pregunta.details }}
+          </p>
+
+          <button [hidden]="!liked" (click)="like(pregunta)" class="btn btn-danger">
+            <i class="fa fa-heart"></i> {{ likes }}
+          </button>
+          <button [hidden]="liked" (click)="like(pregunta)" class="btn btn-light nolike">
+            <i class="fa fa-heart"></i> {{ likes }}
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
