--- a/front/src/app/backComponents/medals-manager/medals-manager.component.html
+++ b/front/src/app/backComponents/medals-manager/medals-manager.component.html
@@ -23,7 +23,7 @@
       </td>
       <td>
         <button type="button" class="btn btn-success" data-toggle="modal"
-          data-target="#modalPersona">Actualizar</button>
+          data-target="#modalMedalla">Actualizar</button>
       </td>
       <td>
         <button type="button" class="btn btn-danger" (click)="delete(medal)">Eliminar</button>
