--- a/front/src/app/frontComponents/sections/tutoriales/tutoriales.component.html
+++ b/front/src/app/frontComponents/sections/tutoriales/tutoriales.component.html
@@ -4,7 +4,7 @@
       <nav class="navbar-dark bg-dark d-flex justify-content-center rounded col-lg-9 mt-2">
         <form class="form-inline mt-3 mr-3 mb-3">
           <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?" aria-label="Search" />
-          <button class="btn btn-info" type="submit">Buscar</button>
+          <button class="btn btn-info" type="submit">_buscar</button>
         </form>
       </nav>
     </div>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="card-bottom justify-content-between d-flex mb-3">
-          <a (click)="verTutorial(tutorial._id)" class="btn btn-info ml-3">Responder</a>
+          <a (click)="verTutorial(tutorial._id)" class="btn btn-info ml-3">_responder</a>
           <p class="mr-3">{{ tutorial.owner }}</p>
         </div>
       </div>
